Mouse Handling works

--- a/Tobii-EasyClick/Tobii-EasyClick/Tobii-EasyClick.csproj
+++ b/Tobii-EasyClick/Tobii-EasyClick/Tobii-EasyClick.csproj
@@ -49,6 +49,7 @@
     <Reference Include="Windows" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MouseHandling.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
