--- a/Tobii-EasyClick/TobiiGUI/TobiiGUI.csproj
+++ b/Tobii-EasyClick/TobiiGUI/TobiiGUI.csproj
@@ -57,7 +57,7 @@
   <ItemGroup>
     <Compile Include="BLE_Utilities.cs" />
     <Compile Include="ButtonListener.cs" />
-    <Compile Include="Device.cs" />
+    <Compile Include="Configuration.cs" />
     <Compile Include="SelectionForm.cs">
       <SubType>Form</SubType>
     </Compile>
