--- a/Tobii-EasyClick/TobiiGUI/TobiiGUI.csproj
+++ b/Tobii-EasyClick/TobiiGUI/TobiiGUI.csproj
@@ -52,8 +52,9 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
-    <Reference Include="TI-WindowsLib">
-      <HintPath>Resources\TI-WindowsLib.dll</HintPath>
+    <Reference Include="TI-WindowsLib, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\Flic\Flic-WindowsLib\TI-WindowsLib\bin\Debug\TI-WindowsLib.dll</HintPath>
     </Reference>
     <Reference Include="Windows" />
   </ItemGroup>
@@ -68,9 +69,6 @@
     <Compile Include="MouseHandling.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="SelectionForm.resx">
-      <DependentUpon>SelectionForm.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -81,6 +79,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="SelectionForm.resx">
+      <DependentUpon>SelectionForm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -97,9 +98,9 @@
   <ItemGroup>
     <None Include="bin\Debug\TI-WindowsLib.dll" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <EmbeddedResource Include="Resources\TI-WindowsLib.dll" />
-    <Content Include="TI-WindowsLib.dll" />
+    <None Include="Resources\TI-WindowsLib.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
